Fixed height of div holding card's name and edition symbol to keep height from jumping around

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -63,6 +63,8 @@
 
 .show_page_card_name {
     font-family: 'MagicMedieval';
+    min-height: 64px;
+    max-height: 64px;
 }
 
 
